[tool.poetry]
name = "tangara-superset"
version = "1.0.0"
description = "This is the data intelligence web application, Superset, created to share Tangara analysis using the data from Tangara sensors."
authors = ["Sebastian Rios Sabogal <sebaxtianrioss@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apache-superset = "^3.0.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
